Better phone view project and blog cards
Changes to be committed:
	modified:   es/projects/iter.html
	modified:   projects/iter.html
	modified:   src/css/utilities.css

--- a/es/projects/iter.html
+++ b/es/projects/iter.html
@@ -43,9 +43,9 @@
           controla a través de una interfaz de realidad
           virtual para Oculus Quest 2, conectada al robot
           usando la misma API.</h2>
-        <h3 class="under-subtitle-link"><a
+        <!-- <h3 class="under-subtitle-link"><a
             href="https://github.com/makiJanus/iter">¡Echa un vistazo al GitHub
-            aquí!</a></h3>
+            aquí!</a></h3> -->
 
         <img class="gif" src="/src/project_posts/project2/intro.gif"
           alt="Isaac Sim Deep Learning simmulation with Kaya">
