--- a/projects/iter.html
+++ b/projects/iter.html
@@ -45,9 +45,9 @@
           interface for Oculus Quest 2, connected to
           the
           robot using the same API.</h2>
-        <h3 class="under-subtitle-link"><a
+        <!-- <h3 class="under-subtitle-link"><a
             href="https://github.com/makiJanus/iter">Check the GitHub
-            here!</a></h3>
+            here!</a></h3> -->
 
         <img class="gif" src="/src/project_posts/project2/intro.gif"
           alt="Isaac Sim Deep Learning simmulation with Kaya">
