projects_cherrypicked en/es updated
Changes to be committed:
	modified:   src/project_posts/projects_cherrypicked.html
	modified:   src/project_posts/projects_cherrypicked_es.html

--- a/src/project_posts/projects_cherrypicked.html
+++ b/src/project_posts/projects_cherrypicked.html
@@ -30,19 +30,18 @@
             </div>
 
             <article class="project">
-                <!-- Project 1 -->
-                <div class="card project1V2" onclick="window.location.href = '/projects/paper.html'">
-                    <img src="/src/project_posts/project1/trayectories.png" alt="Published research: Autonomous mobile robotics" class="card-img-top">
+                <!-- Project 2 -->
+                <div class="card project2" onclick="window.location.href = '/es/projects/iter.html'">
+                    <img src="/src/project_posts/project2/iter_placeholder.jpg" alt="Iter: La modularidad en el corazón del diseño robótico" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
-                            <h3>Published research: Autonomous mobile robotics</h3>
-                            <p>Designing a python library to generate navigation strategies for different types of mobile robots with Deep Reinforcement Learning in Nvidia Isaac Sim.</p>
+                            <h3>Iter: La modularidad en el corazón del diseño robótico</h3>
+                            <p>Creado para ser lo más modular posible, tanto en términos de software como de hardware. Con módulos intercambiables dedicados para cada tarea según los requisitos y una API basada en Python.</p>
                         </div>
                         <div class="card-tags">
-                            <span class="badge badge-green">Research</span>
-                            <span class="badge badge-blue">Robotics</span>
-                            <span class="badge badge-orange">Reinforcement Learning</span>
-                            <span class="badge badge-pink">Simulation</span>
+                            <span class="badge badge-blue">Robótica</span>
+                            <span class="badge badge-purple">Electrónica</span>
+                            <span class="badge badge-cyan">VR</span>
                         </div>
                     </div>
                 </div>
