--- a/src/project_posts/projects_cherrypicked_es.html
+++ b/src/project_posts/projects_cherrypicked_es.html
@@ -30,19 +30,18 @@
             </div>
 
             <article class="project">
-                <!-- Project 1 -->
-                <div class="card project1V2" onclick="window.location.href = '/projects/paper.html'">
-                    <img src="/src/project_posts/project1/trayectories.png" alt="Investigación publicada: Robótica móvil autónoma" class="card-img-top">
+                <!-- Project 2 -->
+                <div class="card project2" onclick="window.location.href = '/projects/iter.html'">
+                    <img src="/src/project_posts/project2/iter_placeholder.jpg" alt="Iter: Modularity at the heart of robotics design" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
-                            <h3>Investigación publicada: Robótica móvil autónoma</h3>
-                            <p>Diseñando una biblioteca de Python para generar estrategias de navegación para diferentes tipos de robots móviles con Aprendizaje por Refuerzo Profundo en Nvidia Isaac Sim.</p>
+                            <h3>Iter: Modularity at the heart of robotics design</h3>
+                            <p>Designed to be as modular as possible, both in terms of software and hardware. With dedicated swappable modules for each task according to the requirements and a Python-based API.</p>
                         </div>
                         <div class="card-tags">
-                            <span class="badge badge-green">Investigación</span>
-                            <span class="badge badge-blue">Robótica</span>
-                            <span class="badge badge-orange">Aprendizaje por Refuerzo</span>
-                            <span class="badge badge-pink">Simulación</span>
+                            <span class="badge badge-blue">Robotics</span>
+                            <span class="badge badge-purple">Electronics</span>
+                            <span class="badge badge-cyan">VR</span>
                         </div>
                     </div>
                 </div>
