Minor Fixes to CherryPicked Project Pages
Changes to be committed:
	modified:   src/project_posts/projects_cherrypicked.html
	modified:   src/project_posts/projects_cherrypicked_es.html

--- a/src/project_posts/projects_cherrypicked_es.html
+++ b/src/project_posts/projects_cherrypicked_es.html
@@ -31,7 +31,7 @@
 
             <article class="project">
                 <!-- Project 2 -->
-                <div class="card project2" onclick="window.location.href = '/projects/iter.html'">
+                <div class="card project2" onclick="window.location.href = '/es/projects/iter.html'">
                     <img src="/src/project_posts/project2/iter_placeholder.jpg" alt="Iter: Modularity at the heart of robotics design" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
@@ -47,7 +47,7 @@
                 </div>
 
                 <!-- Project 10 -->
-                <div class="card project10" onclick="window.location.href = '/projects/lim2n.html'">
+                <div class="card project10" onclick="window.location.href = '/es/projects/lim2n.html'">
                     <img src="/src/project_posts/project10/intro_img.png" alt="Robots que Entienden y Siguen Instrucciones Humanas" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
@@ -64,7 +64,7 @@
                 </div>
 
                 <!-- Project 6 -->
-                <div class="card project6" onclick="window.location.href = '/projects/mini_vizca_400.html'">
+                <div class="card project6" onclick="window.location.href = '/es/projects/mini_vizca_400.html'">
                     <img src="/src/project_posts/project6/digital_twin.jpg" alt="Mini Vizca 400: Gemelo Digital" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
