--- a/src/project_posts/projects_cherrypicked.html
+++ b/src/project_posts/projects_cherrypicked.html
@@ -31,16 +31,16 @@
 
             <article class="project">
                 <!-- Project 2 -->
-                <div class="card project2" onclick="window.location.href = '/es/projects/iter.html'">
-                    <img src="/src/project_posts/project2/iter_placeholder.jpg" alt="Iter: La modularidad en el corazón del diseño robótico" class="card-img-top">
+                <div class="card project2" onclick="window.location.href = '/projects/iter.html'">
+                    <img src="/src/project_posts/project2/iter_placeholder.jpg" alt="Iter: Modularity at the heart of robotics design" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
-                            <h3>Iter: La modularidad en el corazón del diseño robótico</h3>
-                            <p>Creado para ser lo más modular posible, tanto en términos de software como de hardware. Con módulos intercambiables dedicados para cada tarea según los requisitos y una API basada en Python.</p>
+                            <h3>Iter: Modularity at the heart of robotics design</h3>
+                            <p>Designed to be as modular as possible, both in terms of software and hardware. With dedicated swappable modules for each task according to the requirements and a Python-based API.</p>
                         </div>
                         <div class="card-tags">
-                            <span class="badge badge-blue">Robótica</span>
-                            <span class="badge badge-purple">Electrónica</span>
+                            <span class="badge badge-blue">Robotics</span>
+                            <span class="badge badge-purple">Electronics</span>
                             <span class="badge badge-cyan">VR</span>
                         </div>
                     </div>
