Project 11 es/en added, covers of some project chaged to gif ones
Changes to be committed:
	new file:   es/projects/lumina.html
	new file:   es/projects/template_es.html
	new file:   projects/lumina.html
	modified:   src/css/blog_posts.css
	new file:   src/project_posts/project11/1.gif
	new file:   src/project_posts/project11/10.gif
	new file:   src/project_posts/project11/11.png
	new file:   src/project_posts/project11/12.gif
	new file:   src/project_posts/project11/13.gif
	new file:   src/project_posts/project11/14.gif
	new file:   src/project_posts/project11/15.gif
	new file:   src/project_posts/project11/2.png
	new file:   src/project_posts/project11/3.png
	new file:   src/project_posts/project11/4.gif
	new file:   src/project_posts/project11/5.png
	new file:   src/project_posts/project11/6.png
	new file:   src/project_posts/project11/7.png
	new file:   src/project_posts/project11/8.gif
	new file:   src/project_posts/project11/9.gif
	modified:   src/project_posts/projects.html
	modified:   src/project_posts/projects_cherrypicked.html
	modified:   src/project_posts/projects_cherrypicked_es.html
	modified:   src/project_posts/projects_es.html

--- a/src/project_posts/projects.html
+++ b/src/project_posts/projects.html
@@ -31,9 +31,25 @@
 
             <article class="project">
 
+                <!-- Project 11 -->
+                <div class="card project11" onclick="window.location.href = '/projects/lumina.html'">
+                    <img src="/src/project_posts/project11/12.gif" alt="Robots que Entienden y Siguen Instrucciones Humanas" class="card-img-top">
+                    <div class="project-info">
+                        <div class="project-bio">
+                            <h3>Lumina — A personality framework disguised as an erotic streamer</h3>
+                            <p>Lumina is an erotic virtual streamer that combines different AI technologies to create an interactive and engaging experience for her audience.</p>
+                        </div>
+                        <div class="card-tags">
+                            <span class="badge badge-green">Investigación</span>
+                            <span class="badge badge-orange">LLM</span>
+                            <span class="badge badge-pink">Simulación</span>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Project 10 -->
                 <div class="card project10" onclick="window.location.href = '/projects/lim2n.html'">
-                    <img src="/src/project_posts/project10/intro_img.png" alt="Robots That Understand and Follow Human Instructions" class="card-img-top">
+                    <img src="/src/project_posts/project10/sr_4.gif" alt="Robots That Understand and Follow Human Instructions" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
                             <h3>Robots That Understand and Follow Human Instructions</h3>
@@ -50,7 +66,7 @@
 
                 <!-- Project 8 -->
                 <div class="card project8" onclick="window.location.href = '/projects/inverted_wheeled_pendulum_train.html'">
-                    <img src="/src/project_posts/project8/card.png" alt="This robot can navigate while keeping its balance" class="card-img-top">
+                    <img src="/src/project_posts/project8/behaviors.gif" alt="This robot can navigate while keeping its balance" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
                             <h3>This robot can navigate while keeping its balance</h3>
@@ -61,6 +77,22 @@
                             <span class="badge badge-blue">Robotics</span>
                             <span class="badge badge-orange">Reinforcement Learning</span>
                             <span class="badge badge-pink">Simulation</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Project 2 -->
+                <div class="card project2" onclick="window.location.href = '/projects/iter.html'">
+                    <img src="/src/project_posts/project2/intro.gif" alt="Iter: Modularity at the heart of robotics design" class="card-img-top">
+                    <div class="project-info">
+                        <div class="project-bio">
+                            <h3>Iter: Modularity at the heart of robotics design</h3>
+                            <p>Designed to be as modular as possible, both in terms of software and hardware. With dedicated swappable modules for each task according to the requirements and a Python-based API.</p>
+                        </div>
+                        <div class="card-tags">
+                            <span class="badge badge-blue">Robotics</span>
+                            <span class="badge badge-purple">Electronics</span>
+                            <span class="badge badge-cyan">VR</span>
                         </div>
                     </div>
                 </div>
@@ -108,22 +140,6 @@
                             <span class="badge badge-blue">Robotics</span>
                             <span class="badge badge-orange">Reinforcement Learning</span>
                             <span class="badge badge-pink">Simulation</span>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Project 2 -->
-                <div class="card project2" onclick="window.location.href = '/projects/iter.html'">
-                    <img src="/src/project_posts/project2/iter_placeholder.jpg" alt="Iter: Modularity at the heart of robotics design" class="card-img-top">
-                    <div class="project-info">
-                        <div class="project-bio">
-                            <h3>Iter: Modularity at the heart of robotics design</h3>
-                            <p>Designed to be as modular as possible, both in terms of software and hardware. With dedicated swappable modules for each task according to the requirements and a Python-based API.</p>
-                        </div>
-                        <div class="card-tags">
-                            <span class="badge badge-blue">Robotics</span>
-                            <span class="badge badge-purple">Electronics</span>
-                            <span class="badge badge-cyan">VR</span>
                         </div>
                     </div>
                 </div>
