--- a/src/project_posts/projects_cherrypicked.html
+++ b/src/project_posts/projects_cherrypicked.html
@@ -32,7 +32,7 @@
             <article class="project">
                 <!-- Project 2 -->
                 <div class="card project2" onclick="window.location.href = '/projects/iter.html'">
-                    <img src="/src/project_posts/project2/iter_placeholder.jpg" alt="Iter: Modularity at the heart of robotics design" class="card-img-top">
+                    <img src="/src/project_posts/project2/intro.gif" alt="Iter: Modularity at the heart of robotics design" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
                             <h3>Iter: Modularity at the heart of robotics design</h3>
@@ -46,9 +46,25 @@
                     </div>
                 </div>
 
+                <!-- Project 11 -->
+                <div class="card project11" onclick="window.location.href = '/projects/lumina.html'">
+                    <img src="/src/project_posts/project11/12.gif" alt="Robots que Entienden y Siguen Instrucciones Humanas" class="card-img-top">
+                    <div class="project-info">
+                        <div class="project-bio">
+                            <h3>Lumina — A personality framework disguised as an erotic streamer</h3>
+                            <p>Lumina is an erotic virtual streamer that combines different AI technologies to create an interactive and engaging experience for her audience.</p>
+                        </div>
+                        <div class="card-tags">
+                            <span class="badge badge-green">Investigación</span>
+                            <span class="badge badge-orange">LLM</span>
+                            <span class="badge badge-pink">Simulación</span>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Project 10 -->
                 <div class="card project10" onclick="window.location.href = '/projects/lim2n.html'">
-                    <img src="/src/project_posts/project10/intro_img.png" alt="Robots That Understand and Follow Human Instructions" class="card-img-top">
+                    <img src="/src/project_posts/project10/sr_4.gif" alt="Robots That Understand and Follow Human Instructions" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
                             <h3>Robots That Understand and Follow Human Instructions</h3>
@@ -58,21 +74,6 @@
                             <span class="badge badge-green">Research</span>
                             <span class="badge badge-blue">Robotics</span>
                             <span class="badge badge-orange">LLM</span>
-                            <span class="badge badge-pink">Simulation</span>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Project 6 -->
-                <div class="card project6" onclick="window.location.href = '/projects/mini_vizca_400.html'">
-                    <img src="/src/project_posts/project6/digital_twin.jpg" alt="Mini Vizca 400: Digital Twin" class="card-img-top">
-                    <div class="project-info">
-                        <div class="project-bio">
-                            <h3>Mini Vizca 400: Digital Twin</h3>
-                            <p>Designing a digital twin of the robot Mini Vizca 400 of Maquintel Robotic Services in Nvidia Isaac Sim.</p>
-                        </div>
-                        <div class="card-tags">
-                            <span class="badge badge-blue">Robotics</span>
                             <span class="badge badge-pink">Simulation</span>
                         </div>
                     </div>
