--- a/src/project_posts/projects_es.html
+++ b/src/project_posts/projects_es.html
@@ -31,9 +31,25 @@
 
             <article class="project">
 
+                <!-- Project 11 -->
+                <div class="card project11" onclick="window.location.href = '/es/projects/lumina.html'">
+                    <img src="/src/project_posts/project11/12.gif" alt="Robots que Entienden y Siguen Instrucciones Humanas" class="card-img-top">
+                    <div class="project-info">
+                        <div class="project-bio">
+                            <h3>Lumina - Framework de personalidad disfrazado como streamer erótica</h3>
+                            <p>Lumina es una streamer virtual erótica que combina distintas tecnologías de inteligencia artificial para crear una experiencia interactiva y atractiva para su audiencia.</p>
+                        </div>
+                        <div class="card-tags">
+                            <span class="badge badge-green">Investigación</span>
+                            <span class="badge badge-orange">LLM</span>
+                            <span class="badge badge-pink">Simulación</span>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Project 10 -->
                 <div class="card project10" onclick="window.location.href = '/es/projects/lim2n.html'">
-                    <img src="/src/project_posts/project10/intro_img.png" alt="Robots que Entienden y Siguen Instrucciones Humanas" class="card-img-top">
+                    <img src="/src/project_posts/project10/sr_4.gif" alt="Robots que Entienden y Siguen Instrucciones Humanas" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
                             <h3>Robots que Entienden y Siguen Instrucciones Humanas</h3>
@@ -50,7 +66,7 @@
 
                 <!-- Project 8 -->
                 <div class="card project8" onclick="window.location.href = '/es/projects/inverted_wheeled_pendulum_train.html'">
-                    <img src="/src/project_posts/project8/card.png" alt="Este robot puede navegar mientras mantiene su equilibrio" class="card-img-top">
+                    <img src="/src/project_posts/project8/behaviors.gif" alt="Este robot puede navegar mientras mantiene su equilibrio" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
                             <h3>Este robot puede navegar mientras mantiene su equilibrio</h3>
@@ -61,6 +77,22 @@
                             <span class="badge badge-blue">Robótica</span>
                             <span class="badge badge-orange">Aprendizaje por Refuerzo</span>
                             <span class="badge badge-pink">Simulación</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Project 2 -->
+                <div class="card project2" onclick="window.location.href = '/es/projects/iter.html'">
+                    <img src="/src/project_posts/project2/intro.gif" alt="Iter: La modularidad en el corazón del diseño robótico" class="card-img-top">
+                    <div class="project-info">
+                        <div class="project-bio">
+                            <h3>Iter: La modularidad en el corazón del diseño robótico</h3>
+                            <p>Creado para ser lo más modular posible, tanto en términos de software como de hardware. Con módulos intercambiables dedicados para cada tarea según los requisitos y una API basada en Python.</p>
+                        </div>
+                        <div class="card-tags">
+                            <span class="badge badge-blue">Robótica</span>
+                            <span class="badge badge-purple">Electrónica</span>
+                            <span class="badge badge-cyan">VR</span>
                         </div>
                     </div>
                 </div>
@@ -108,22 +140,6 @@
                             <span class="badge badge-blue">Robótica</span>
                             <span class="badge badge-orange">Aprendizaje por Refuerzo</span>
                             <span class="badge badge-pink">Simulación</span>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Project 2 -->
-                <div class="card project2" onclick="window.location.href = '/es/projects/iter.html'">
-                    <img src="/src/project_posts/project2/iter_placeholder.jpg" alt="Iter: La modularidad en el corazón del diseño robótico" class="card-img-top">
-                    <div class="project-info">
-                        <div class="project-bio">
-                            <h3>Iter: La modularidad en el corazón del diseño robótico</h3>
-                            <p>Creado para ser lo más modular posible, tanto en términos de software como de hardware. Con módulos intercambiables dedicados para cada tarea según los requisitos y una API basada en Python.</p>
-                        </div>
-                        <div class="card-tags">
-                            <span class="badge badge-blue">Robótica</span>
-                            <span class="badge badge-purple">Electrónica</span>
-                            <span class="badge badge-cyan">VR</span>
                         </div>
                     </div>
                 </div>
