--- a/src/project_posts/projects_cherrypicked_es.html
+++ b/src/project_posts/projects_cherrypicked_es.html
@@ -32,7 +32,7 @@
             <article class="project">
                 <!-- Project 2 -->
                 <div class="card project2" onclick="window.location.href = '/es/projects/iter.html'">
-                    <img src="/src/project_posts/project2/iter_placeholder.jpg" alt="Iter: La modularidad en el corazón del diseño robótico" class="card-img-top">
+                    <img src="/src/project_posts/project2/intro.gif" alt="Iter: La modularidad en el corazón del diseño robótico" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
                             <h3>Iter: La modularidad en el corazón del diseño robótico</h3>
@@ -46,9 +46,25 @@
                     </div>
                 </div>
 
+                <!-- Project 11 -->
+                <div class="card project11" onclick="window.location.href = '/es/projects/lumina.html'">
+                    <img src="/src/project_posts/project11/12.gif" alt="Robots que Entienden y Siguen Instrucciones Humanas" class="card-img-top">
+                    <div class="project-info">
+                        <div class="project-bio">
+                            <h3>Lumina - Framework de personalidad disfrazado como streamer erótica</h3>
+                            <p>Lumina es una streamer virtual erótica que combina distintas tecnologías de inteligencia artificial para crear una experiencia interactiva y atractiva para su audiencia.</p>
+                        </div>
+                        <div class="card-tags">
+                            <span class="badge badge-green">Investigación</span>
+                            <span class="badge badge-orange">LLM</span>
+                            <span class="badge badge-pink">Simulación</span>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Project 10 -->
                 <div class="card project10" onclick="window.location.href = '/es/projects/lim2n.html'">
-                    <img src="/src/project_posts/project10/intro_img.png" alt="Robots que Entienden y Siguen Instrucciones Humanas" class="card-img-top">
+                    <img src="/src/project_posts/project10/sr_4.gif" alt="Robots que Entienden y Siguen Instrucciones Humanas" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
                             <h3>Robots que Entienden y Siguen Instrucciones Humanas</h3>
@@ -58,21 +74,6 @@
                             <span class="badge badge-green">Investigación</span>
                             <span class="badge badge-blue">Robótica</span>
                             <span class="badge badge-orange">LLM</span>
-                            <span class="badge badge-pink">Simulación</span>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Project 6 -->
-                <div class="card project6" onclick="window.location.href = '/es/projects/mini_vizca_400.html'">
-                    <img src="/src/project_posts/project6/digital_twin.jpg" alt="Mini Vizca 400: Gemelo Digital" class="card-img-top">
-                    <div class="project-info">
-                        <div class="project-bio">
-                            <h3>Mini Vizca 400: Gemelo Digital</h3>
-                            <p>Gemelo digital del robot Mini Vizca 400 de Maquintel Robotic Services en Nvidia Isaac Sim.</p>
-                        </div>
-                        <div class="card-tags">
-                            <span class="badge badge-blue">Robótica</span>
                             <span class="badge badge-pink">Simulación</span>
                         </div>
                     </div>
