small modifications to lumi post and update of CV in spanish, adding more recent experience and projects.
Changes to be committed:
	modified:   es/projects/lumina.html
	modified:   projects/lumina.html
	modified:   src/assets/CV_esp.pdf

--- a/projects/lumina.html
+++ b/projects/lumina.html
@@ -40,7 +40,7 @@
         
         <h3>Why?</h3>
         <p>
-          Lumina is a deeply personal project with a strong emotional component, and it has been one of the 
+          Lumina has been one of the 
           most complex projects so far in terms of the number of elements that must work together for it to 
           function correctly. The end goal is a fully autonomous virtual streamer capable of interacting with 
           the audience without human intervention.
@@ -52,23 +52,8 @@
         <p>
           The idea was never fully planned; it emerged as an accumulation of concepts that came together to 
           form Lumi, from early attempts to build an NLCA (Natural Language Cognitive Architecture) based on 
-          large language models to an almost obsessive interest in the serie Westworld, where Dr. Ford has 
-          been a constant inspiration through my engineering journey. Could I someday build a Dolores 
-          Abernathy?
+          large language models to experiments with text-to-image generative models, attempts to create a humanoid social robot, and an interest in the adult entertainment industry, all of which converged to give rise to this project.
         </p>
-
-        <div class="video-container">
-          <iframe  
-            width="560" 
-            height="315" 
-            src="https://www.youtube.com/embed/MypWNnxZXaQ?si=wUw-Atelw3GRO60t" 
-            title="YouTube video player" 
-            frameborder="0" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-            referrerpolicy="strict-origin-when-cross-origin" 
-            allowfullscreen>
-          </iframe>
-        </div>
 
         <p>
           It’s something that took a lot of time and resources, so monetization became a natural question. 
@@ -78,11 +63,9 @@
 
         <h3>First attempt</h3>
         <p>
-          Months were spent creating the first functional version of Lumina, more than one would like to admit. 
+          Months were spent creating the first functional version of Lumina. 
           After running trial streams on Chaturbate, it became clear the idea was worth pursuing; users, few at 
-          the time, seemed to enjoy the experience, and some left tips, feedback, and positive comments. This 
-          contrasted with remarks from close acquaintances, many of whom didn’t like or simply didn’t understand 
-          the project.
+          the time, seemed to enjoy the experience, and some left tips, feedback, and positive comments.
         </p>
 
         <img src="/src/project_posts/project11/2.png"
@@ -105,7 +88,7 @@
         
         <p>
           This reduced inference time, from when information arrives from Chaturbate to when Lumina responds, from 
-          ~30 seconds down to ~3.5 seconds, significantly improving the user experience. The best part is that 
+          ~30 seconds down to ~1.5 seconds, significantly improving the user experience. The best part is that 
           this same architecture can be repurposed for social robotics projects.
         </p>
 
@@ -173,8 +156,8 @@
           alt="AI image generated of Lumina streamer virtual erótica">
         <img class="gif" src="/src/project_posts/project11/12.gif"
           alt="video generated of Lumina streamer virtual erótica">
-        <img class="gif" src="/src/project_posts/project11/14.gif"
-          alt="video generated of Lumina streamer virtual erótica">
+        <!-- <img class="gif" src="/src/project_posts/project11/14.gif"
+          alt="video generated of Lumina streamer virtual erótica"> -->
         <img class="gif" src="/src/project_posts/project11/15.gif"
           alt="video generated of Lumina streamer virtual erótica">
 
