Updated Mini Vizca 400 project page to remove unnecessary phrases and improve clarity.
Changes to be committed:
	modified:   es/projects/mini_vizca_400.html
	modified:   projects/mini_vizca_400.html

--- a/es/projects/mini_vizca_400.html
+++ b/es/projects/mini_vizca_400.html
@@ -39,13 +39,11 @@
         alt="Demostración de Isaac Sim Mini Vizca 400">
         <h3>El Problema</h3>
         <p>Maquintel se enfoca en analizar tubos y canales de relave usando robots móviles.
-          Hace un tiempo postulé a un puesto de trabajo en esa empresa, pero no fui seleccionado. 
-          Sin embargo, todavía tengo curiosidad por conocer más sobre sus robots y cómo funcionan, 
+          Tengo curiosidad por conocer más sobre sus robots y cómo funcionan, 
           lamentablemente no tengo acceso a ellos, así que hagámos un poco de ingeniería inversa juntos.
         </p>
         
-        <p>En este proyecto diseñé una réplica digital para aliviar el peso inmensurable de mi curiosidad, 
-          analizando la información pública sobre los robots de Maquintel. 
+        <p>En este proyecto diseñé una réplica digital analizando la información pública sobre los robots de Maquintel. 
         </p>
         
         <img src="/src/project_posts/project6/vizca_real.jpg"
