--- a/projects/mini_vizca_400.html
+++ b/projects/mini_vizca_400.html
@@ -39,13 +39,12 @@
           alt="Isaac Sim Mini Vizca 400 demo">
         <h3>The Problem</h3>
         <p>Maquintel Robotic Services focuses on analize tubular and sluice channels worn using mobile robots.
-          A while back I applied for a job at that company, but I wasn't selected. However, I'm still curious to 
+          I'm curious to 
           learn more about their robots and how they works, sadly I do not have access to them, so let's do 
           some reverse engineering together.
         </p>
 
-        <p>In this project, I design a digital twin to address the immeasurable 
-          weight of my curiosity by analyzing public information about Maquintel's robots. 
+        <p>In this project, I design a digital twin by analyzing public information about Maquintel's robots. 
         </p>
 
         <img src="/src/project_posts/project6/vizca_real.jpg"
